--- a/src/login/CompanyHome.fxml
+++ b/src/login/CompanyHome.fxml
@@ -9,25 +9,12 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane id="AnchorPane" prefHeight="900.0" prefWidth="1100.0" style="-fx-background-color: #bb9d9d;" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="login.CompanyHomeController">
+
+<AnchorPane id="AnchorPane" prefHeight="1000.0" prefWidth="1000.0" style="-fx-background-color: #bb9d9d;" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8">
    <children>
-      <Button layoutY="250.0" mnemonicParsing="false" onAction="#showAddCarView" prefHeight="91.0" prefWidth="235.0" text="Add car" />
-      <Button layoutY="370.0" mnemonicParsing="false" prefHeight="91.0" prefWidth="320.0" text="View Rent Information" />
-      <Button layoutY="492.0" mnemonicParsing="false" prefHeight="91.0" prefWidth="235.0" text="LOG OUT" />
-      <Button layoutY="611.0" mnemonicParsing="false" onAction="#showViewCars" prefHeight="91.0" prefWidth="235.0" text="View all cars" />
-      <Pane prefHeight="120.0" prefWidth="1100.0" style="-fx-background-color: #A08383;">
-         <children>
-            <Label layoutX="34.0" layoutY="7.0" prefHeight="107.0" prefWidth="309.0" text="Easy Wheels">
-               <font>
-                  <Font name="Segoe Print" size="43.0" />
-               </font>
-            </Label>
-            <Label fx:id="CompanyName" alignment="CENTER_RIGHT" contentDisplay="RIGHT" layoutX="707.0" prefHeight="120.0" prefWidth="386.0" text="Label">
-               <font>
-                  <Font name="Arial" size="43.0" />
-               </font>
-            </Label>
-         </children>
-      </Pane>
+      <Button layoutY="250.0" mnemonicParsing="false" prefHeight="91.0" prefWidth="235.0" text="Add car" />
+      <Button layoutY="370.0" mnemonicParsing="false" prefHeight="91.0" prefWidth="235.0" text="Edit car details" />
+      <Button layoutY="492.0" mnemonicParsing="false" prefHeight="91.0" prefWidth="235.0" text="Remove car" />
+      <Button layoutY="611.0" mnemonicParsing="false" prefHeight="91.0" prefWidth="235.0" text="View all cars" />
    </children>
 </AnchorPane>
