--- a/src/login/AddCar.fxml
+++ b/src/login/AddCar.fxml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.effect.*?>
+<?import javafx.scene.image.*?>
 <?import javafx.scene.text.*?>
 <?import java.lang.*?>
 <?import java.util.*?>
@@ -7,40 +9,90 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
+<AnchorPane id="AnchorPane" fx:id="anchorPane" prefHeight="800.0" prefWidth="1000.0" style="-fx-background-color: #bb9d9d;" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="login.AddCarController">
 
-<AnchorPane id="AnchorPane" prefHeight="1000.0" prefWidth="1000.0" style="-fx-background-color: #bb9d9d;" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8" fx:controller="login.AddCarController">
    <children>
-      <Label layoutX="54.0" layoutY="158.0" prefHeight="58.0" prefWidth="121.0" text="Car ID">
+
+      <Label layoutX="77.0" layoutY="533.0" prefHeight="58.0" prefWidth="121.0" text="Quantity">
+
+         <font>
+
+            <Font size="27.0" />
+
+         </font>
+
+      </Label>
+
+      <Label layoutX="94.0" layoutY="288.0" prefHeight="58.0" prefWidth="121.0" text="Model">
+
+         <font>
+
+            <Font size="27.0" />
+
+         </font>
+
+      </Label>
+
+      <Label layoutX="29.0" layoutY="372.0" prefHeight="58.0" prefWidth="159.0" text="No. of Seats">
+
+         <font>
+
+            <Font size="27.0" />
+
+         </font>
+
+      </Label>
+
+      <TextField fx:id="model" layoutX="215.0" layoutY="291.0" prefHeight="51.0" prefWidth="323.0" />
+
+      <TextField fx:id="no_of_seats" layoutX="215.0" layoutY="375.0" prefHeight="51.0" prefWidth="323.0" />
+
+      <TextField fx:id="price" layoutX="215.0" layoutY="456.0" prefHeight="51.0" prefWidth="323.0" />
+
+      <Label layoutX="118.0" layoutY="456.0" prefHeight="58.0" prefWidth="121.0" text="Rent">
+
+         <font>
+
+            <Font size="27.0" />
+
+         </font>
+
+      </Label>
+
+      <TextField fx:id="quantity" layoutX="215.0" layoutY="536.0" prefHeight="51.0" prefWidth="323.0" />
+      <Pane prefHeight="132.0" prefWidth="1000.0" style="-fx-background-color: #A08383;">
+         <children>
+            <Label layoutX="14.0" layoutY="43.0" text="Easy Wheels">
+               <font>
+                  <Font name="Segoe Print" size="45.0" />
+               </font>
+            </Label>
+            <Button layoutX="795.0" layoutY="53.0" mnemonicParsing="false" onAction="#goBackHome" style="-fx-background-color: transparent;" text="Home">
+               <font>
+                  <Font size="28.0" />
+               </font>
+               <graphic>
+                  <ImageView fitHeight="53.0" fitWidth="96.0">
+                     <image>
+                        <Image url="@images/home2.png" />
+                     </image>
+                  </ImageView>
+               </graphic>
+            </Button>
+         </children>
+      </Pane>
+      <Button layoutX="277.0" layoutY="620.0" mnemonicParsing="false" onAction="#AddCarAction" prefHeight="59.0" prefWidth="199.0" style="-fx-background-color: transparent; -fx-border-color: black;" text="Add Car">
          <font>
             <Font size="27.0" />
          </font>
-      </Label>
-      <Label layoutX="54.0" layoutY="246.0" prefHeight="58.0" prefWidth="121.0" text="Model">
+      </Button>
+      <Button layoutX="659.0" layoutY="620.0" mnemonicParsing="false" onAction="#browseImage" style="-fx-background-color: transparent; -fx-border-color: black;" text="Browse Image">
          <font>
             <Font size="27.0" />
          </font>
-      </Label>
-      <Label layoutX="6.0" layoutY="328.0" prefHeight="58.0" prefWidth="202.0" text="Company Name">
-         <font>
-            <Font size="27.0" />
-         </font>
-      </Label>
-      <Label layoutX="16.0" layoutY="412.0" prefHeight="58.0" prefWidth="159.0" text="No. of Seats">
-         <font>
-            <Font size="27.0" />
-         </font>
-      </Label>
-      <TextField fx:id="id" layoutX="236.0" layoutY="162.0" />
-      <TextField fx:id="model" layoutX="236.0" layoutY="250.0" />
-      <TextField fx:id="name" layoutX="236.0" layoutY="332.0" />
-      <TextField fx:id="no_of_seats" layoutX="236.0" layoutY="416.0" />
-      <Button layoutX="445.0" layoutY="593.0" mnemonicParsing="false" onAction="#AddCarAction" text="Add" />
-      <Label layoutX="45.0" layoutY="500.0" prefHeight="58.0" prefWidth="121.0" text="Price ">
-         <font>
-            <Font size="27.0" />
-         </font>
-      </Label>
-      <TextField fx:id="price" layoutX="236.0" layoutY="504.0" />
-      <Button layoutX="673.0" layoutY="165.0" mnemonicParsing="false" onAction="#goBackHome" text="Go Back to Home" />
+      </Button>
+      <ImageView fx:id="imageView" fitHeight="289.0" fitWidth="369.0" layoutX="578.0" layoutY="291.0" pickOnBounds="true" preserveRatio="true" />
+
    </children>
+
 </AnchorPane>
