--- a/src/login/RentCar.fxml
+++ b/src/login/RentCar.fxml
@@ -8,7 +8,7 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="722.0" prefWidth="1000.0" style="-fx-background-color: #bb9d9d;" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="login.RentCarController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1000.0" style="-fx-background-color: #bb9d9d;" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="login.RentCarController">
    <children>
       <Pane prefHeight="132.0" prefWidth="1000.0" style="-fx-background-color: #A08383;">
          <children>
@@ -17,7 +17,7 @@
                   <Font name="Segoe Print" size="45.0" />
                </font>
             </Label>
-            <Button layoutX="786.0" layoutY="49.0" mnemonicParsing="false" onAction="#goBackHome" style="-fx-background-color: transparent;" text="Home">
+            <Button layoutX="778.0" layoutY="49.0" mnemonicParsing="false" onAction="#goBackHome" style="-fx-background-color: transparent;" text="Home">
                <font>
                   <Font size="28.0" />
                </font>
@@ -31,14 +31,14 @@
             </Button>
          </children>
       </Pane>
-      <AnchorPane layoutX="40.0" layoutY="260.0" prefHeight="409.0" prefWidth="649.0" style="-fx-border-color: black;">
+      <AnchorPane layoutX="40.0" layoutY="260.0" prefHeight="461.0" prefWidth="649.0" style="-fx-border-color: black;">
          <children>
             <Label layoutX="34.0" layoutY="43.0" prefHeight="45.0" prefWidth="153.0" text="Car Model :">
                <font>
                   <Font size="30.0" />
                </font>
             </Label>
-            <DatePicker fx:id="pick" layoutX="34.0" layoutY="161.0" prefHeight="51.0" prefWidth="259.0" />
+            <DatePicker fx:id="pick" layoutX="34.0" layoutY="161.0" onAction="#changeDate" onKeyPressed="#changeDate" onMouseClicked="#changeDate" onMousePressed="#changeDate" prefHeight="51.0" prefWidth="259.0" />
             <Label layoutX="34.0" layoutY="104.0" prefHeight="45.0" prefWidth="193.0" text="Pick-Up Date">
                <font>
                   <Font size="30.0" />
@@ -55,7 +55,7 @@
                   <Font size="30.0" />
                </font>
             </CheckBox>
-            <Label layoutX="34.0" layoutY="314.0" prefHeight="45.0" prefWidth="153.0" text="Total Rent :">
+            <Label layoutX="34.0" layoutY="314.0" prefHeight="45.0" prefWidth="185.0" text="Rent(per day):">
                <font>
                   <Font size="30.0" />
                </font>
@@ -65,7 +65,17 @@
                   <Font size="30.0" />
                </font>
             </Label>
-            <Label fx:id="rent" layoutX="210.0" layoutY="314.0" prefHeight="45.0" prefWidth="273.0">
+            <Label fx:id="rent" layoutX="240.0" layoutY="314.0" prefHeight="45.0" prefWidth="387.0">
+               <font>
+                  <Font size="30.0" />
+               </font>
+            </Label>
+            <Label layoutX="63.0" layoutY="383.0" prefHeight="45.0" prefWidth="164.0" text="Total Rent :">
+               <font>
+                  <Font size="30.0" />
+               </font>
+            </Label>
+            <Label fx:id="total_rent" layoutX="240.0" layoutY="383.0" prefHeight="45.0" prefWidth="387.0">
                <font>
                   <Font size="30.0" />
                </font>
