--- a/src/login/forgotPassword.fxml
+++ b/src/login/forgotPassword.fxml
@@ -1,26 +1,62 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.text.*?>
 <?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="1000.0" prefWidth="1000.0" style="-fx-background-color: #bb9d9d;" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="login.forgotPasswordController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="816.0" prefWidth="1000.0" style="-fx-background-color: #bb9d9d;" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="login.forgotPasswordController">
+
    <children>
-      <Label layoutX="149.0" layoutY="254.0" prefHeight="35.0" prefWidth="115.0" text="email">
+
+      <Label alignment="CENTER_RIGHT" layoutX="48.0" layoutY="374.0" prefHeight="69.0" prefWidth="241.0" text="email">
+
          <font>
+
             <Font size="47.0" />
+
          </font>
+
       </Label>
-      <Label layoutX="64.0" layoutY="345.0" prefHeight="69.0" prefWidth="305.0" text="new password">
+
+      <Label layoutX="32.0" layoutY="483.0" prefHeight="69.0" prefWidth="273.0" text="new password">
+
          <font>
+
             <Font size="41.0" />
+
+         </font>
+
+      </Label>
+
+      <TextField fx:id="email" layoutX="342.0" layoutY="383.0" prefHeight="51.0" prefWidth="393.0" />
+
+      <PasswordField fx:id="password" layoutX="342.0" layoutY="492.0" prefHeight="51.0" prefWidth="393.0" />
+
+      <Button layoutX="372.0" layoutY="600.0" mnemonicParsing="false" onAction="#forgotPasswordAction" prefHeight="79.0" prefWidth="257.0" style="-fx-background-color: transparent; -fx-border-color: black;" text="Save!">
+         <font>
+            <Font size="33.0" />
+         </font></Button>
+      <Label layoutX="32.0" layoutY="236.0" text="Change Password">
+         <font>
+            <Font name="Arial" size="53.0" />
          </font>
       </Label>
-      <TextField fx:id="email" layoutX="426.0" layoutY="254.0" prefHeight="51.0" prefWidth="393.0" />
-      <PasswordField fx:id="password" layoutX="429.0" layoutY="345.0" prefHeight="51.0" prefWidth="386.0" />
-      <Button layoutX="412.0" layoutY="475.0" mnemonicParsing="false" onAction="#forgotPasswordAction" text="Save!" />
+      <Pane prefHeight="107.0" prefWidth="1000.0" style="-fx-background-color: #A08383;">
+         <children>
+            <Label layoutX="14.0" layoutY="22.0" text="Easy Wheels">
+               <font>
+                  <Font name="Segoe Print" size="45.0" />
+               </font>
+            </Label>
+            <Button alignment="CENTER_RIGHT" layoutX="740.0" layoutY="22.0" mnemonicParsing="false" onAction="#signInButton" prefHeight="81.0" prefWidth="260.0" style="-fx-background-color: transparent;" text="Sign In">
+               <font>
+                  <Font size="34.0" />
+               </font>
+            </Button>
+         </children>
+      </Pane>
+
    </children>
+
 </AnchorPane>
