--- a/src/login/signUpCompany.fxml
+++ b/src/login/signUpCompany.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.image.*?>
 <?import javafx.scene.text.*?>
 <?import java.lang.*?>
 <?import java.util.*?>
@@ -7,44 +8,61 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane id="AnchorPane" prefHeight="950.0" prefWidth="1100.0" style="-fx-background-color: #bb9d9d;" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="login.SignUpCompanyController">
+<AnchorPane id="AnchorPane" prefHeight="817.0" prefWidth="912.0" style="-fx-background-color: #bb9d9d;" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="login.SignUpCompanyController">
    <children>
-      <Label layoutX="205.0" layoutY="217.0" prefHeight="66.0" prefWidth="144.0" text="email">
-         <font>
-            <Font size="39.0" />
-         </font>
-      </Label>
-      <Label layoutX="131.0" layoutY="411.0" prefHeight="66.0" prefWidth="189.0" text="password">
-         <font>
-            <Font size="39.0" />
-         </font>
-      </Label>
-      <Label layoutX="60.0" layoutY="311.0" prefHeight="66.0" prefWidth="290.0" text="company name">
+      <Label layoutX="208.0" layoutY="234.0" prefHeight="66.0" prefWidth="144.0" text="email">
          <font>
             <Font size="36.0" />
          </font>
       </Label>
-      <Label layoutX="24.0" layoutY="512.0" prefHeight="66.0" prefWidth="290.0" text="confirm password">
+      <Label layoutX="147.0" layoutY="305.0" prefHeight="66.0" prefWidth="189.0" text="password">
          <font>
             <Font size="36.0" />
          </font>
       </Label>
-      <Label layoutX="115.0" layoutY="611.0" prefHeight="66.0" prefWidth="205.0" text="contact no.">
+      <Label layoutX="59.0" layoutY="160.0" prefHeight="66.0" prefWidth="290.0" text="company name">
          <font>
-            <Font size="39.0" />
+            <Font size="36.0" />
          </font>
       </Label>
-      <Label layoutX="169.0" layoutY="708.0" prefHeight="66.0" prefWidth="144.0" text="address">
+      <Label layoutX="14.0" layoutY="379.0" prefHeight="66.0" prefWidth="290.0" text="confirm password">
          <font>
-            <Font size="39.0" />
+            <Font size="36.0" />
          </font>
       </Label>
-      <Button layoutX="557.0" layoutY="874.0" mnemonicParsing="false" onAction="#SignUpAction" text="Sign Up" />
-      <TextField fx:id="email" layoutX="355.0" layoutY="225.0" prefHeight="51.0" prefWidth="505.0" />
-      <TextField fx:id="comp_name" layoutX="355.0" layoutY="319.0" prefHeight="51.0" prefWidth="505.0" />
-      <TextField fx:id="contact" layoutX="355.0" layoutY="619.0" prefHeight="51.0" prefWidth="505.0" />
-      <PasswordField fx:id="password" layoutX="355.0" layoutY="419.0" prefHeight="51.0" prefWidth="505.0" />
-      <PasswordField fx:id="conf_pass" layoutX="355.0" layoutY="520.0" prefHeight="51.0" prefWidth="505.0" />
-      <TextArea fx:id="address" layoutX="361.0" layoutY="704.0" prefHeight="140.0" prefWidth="496.0" AnchorPane.leftAnchor="361.0" />
+      <Label layoutX="125.0" layoutY="457.0" prefHeight="66.0" prefWidth="205.0" text="contact no.">
+         <font>
+            <Font size="36.0" />
+         </font>
+      </Label>
+      <Label layoutX="170.0" layoutY="558.0" prefHeight="66.0" prefWidth="144.0" text="address">
+         <font>
+            <Font size="36.0" />
+         </font>
+      </Label>
+      <Button layoutX="404.0" layoutY="684.0" mnemonicParsing="false" onAction="#SignUpAction" prefHeight="87.0" prefWidth="225.0" style="-fx-background-color: transparent; -fx-border-color: black;" text="Sign Up">
+         <font>
+            <Font size="36.0" />
+         </font></Button>
+      <TextField fx:id="comp_name" layoutX="352.0" layoutY="167.0" prefHeight="51.0" prefWidth="335.0" />
+      <TextField fx:id="email" layoutX="352.0" layoutY="241.0" prefHeight="51.0" prefWidth="335.0" />
+      <TextField fx:id="contact" layoutX="349.0" layoutY="464.0" prefHeight="51.0" prefWidth="335.0" />
+      <PasswordField fx:id="password" layoutX="352.0" layoutY="312.0" prefHeight="51.0" prefWidth="335.0" />
+      <PasswordField fx:id="conf_pass" layoutX="349.0" layoutY="386.0" prefHeight="51.0" prefWidth="335.0" />
+      <TextArea fx:id="address" layoutX="349.0" layoutY="541.0" prefHeight="100.0" prefWidth="335.0" AnchorPane.leftAnchor="349.0" />
+      <Pane layoutY="-2.0" prefHeight="115.0" prefWidth="912.0" style="-fx-background-color: #A08383;">
+         <children>
+            <Label layoutX="14.0" layoutY="22.0" text="Easy Wheels">
+               <font>
+                  <Font name="Segoe Print" size="45.0" />
+               </font>
+            </Label>
+            <Button alignment="CENTER_RIGHT" layoutX="654.0" layoutY="19.0" mnemonicParsing="false" onAction="#signInButton" prefHeight="93.0" prefWidth="260.0" style="-fx-background-color: transparent;" text="Sign In">
+               <font>
+                  <Font size="34.0" />
+               </font>
+            </Button>
+         </children>
+      </Pane>
    </children>
 </AnchorPane>
